se ajusta diseño de los productos, se agrega filtro por categorías y por precio

--- a/FakeStore/src/index.css
+++ b/FakeStore/src/index.css
@@ -2,7 +2,9 @@
 @tailwind components;
 @tailwind utilities;
 
+
 body {
-    background-color: #020202;
+    background-color: #3d3d3d;
     color: #fff;
+    font-family: 'Comfortaa Variable', system-ui;
 }
