se configura para que sea responsive, se agrega barra de búsqueda y se termian detalles como fondo y colores

--- a/FakeStore/src/index.css
+++ b/FakeStore/src/index.css
@@ -4,7 +4,8 @@
 
 
 body {
-    background-color: #3d3d3d;
+    background:radial-gradient(125% 125% at 60% 10%,#000 40%,#63e 100%);
     color: #fff;
+    color-scheme: dark;
     font-family: 'Comfortaa Variable', system-ui;
 }
